<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    android:orientation="vertical">

    <!-- Top Section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/primary"
        android:padding="@dimen/_4sdp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/app_icon"
                android:background="@color/base"
                android:src="@drawable/app_logo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@id/logo"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/popup_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="18dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_menu" />
    </RelativeLayout>

    <!-- Navbar -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:backgroundTint="@color/secondary"
        app:tabTextAppearance="@style/CustomTabText"
        app:tabIndicatorColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/tab_unselected" />

    <!-- Fragment Container -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/base" />
</LinearLayout>