<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <RelativeLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/primary"
        android:padding="@dimen/_4sdp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/app_icon"
                android:background="@color/base"
                android:src="@drawable/app_logo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@id/logo"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/top_section"
        android:layout_above="@+id/volver_button"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:text="@string/bienvenido"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/secondary"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:text="Cuando abra la aplicación móvil oprima entrar. Se desplegará una pantalla con tres columnas. A la izquierda la galería con todas las fotos de las arvenses. En el centro la columna titulada Taxonomía. A la derecha se muestra la sección de Información Adicional."
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/secondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="@dimen/_296sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:text="Galería: "
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_text_about_us"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_8sdp" />

                <TextView
                    android:id="@+id/galeriaText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:text=""
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/secondary" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="@dimen/_296sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:text="Taxonomía:"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_text_about_us"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_8sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:text="¡Recuerde que cuando cambie de hoja ancha a hoja angosta debe limpiar las marcas!"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/secondary" />

                <TextView
                    android:id="@+id/taxonomiaText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:text=""
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/secondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="@dimen/_296sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:text="Opción de coincidencias"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_text_about_us"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_8sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:text="Si los atributos que usted ha escogido reducen el número de especies a un número pequeño, y su arvense desconocida no está entre ellas, hay tres posibles razones:"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/secondary" />

                <TextView
                    android:id="@+id/coincidenciasText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:text=""
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/secondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="@dimen/_296sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:text="Información Adicional"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_text_about_us"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_8sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="Puede descargar en formato PDF las referencias utilizadas para confeccionar la aplicación móvil "
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/secondary" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/volver_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48ssp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/no_rounded_button"
        android:text="Volver"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:backgroundTint="@color/primary" />
</RelativeLayout>